修改build.xml使之能够多渠道批量打包，修改MainActivity显示渠道信息

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="CHANNEL"
+            android:value="CHANNEL_VALUE" >
+        </meta-data>
+        <meta-data
+            android:name="NAME"
+            android:value="VALUE" >
+        </meta-data>
     </application>
 
 </manifest>
